--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
 				<ul class="navbar-nav nav-dropdown js-float-line" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-danger text-primary display-4" href="index.html">
 							Home</a>
-					</li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
-							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
+					</li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="about-you.html">
+							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="services.html">
 							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
-							Fiorente Insights</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
 							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
 							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
 							Contact</a></li></ul>
@@ -236,7 +235,7 @@
 					<h3 class="mbr-section-subtitle mbr-regular mbr-black pb-2 mbr-fonts-style display-4"><br><br></h3>
 					<h2 class="mbr-section-title mbr-semibold mbr-black pb-4 mbr-fonts-style display-2">How can we help?</h2>
 					
-					<div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-warning display-4" href="#">Individuals &amp; Families</a> <a class="btn btn-lg btn-white-outline display-4" href="#">Executives &amp; Businesses</a></div>
+					<div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-warning display-4" href="about-you.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Learn about our personalised services</a></div>
 				</div>
 			</div>
 		</div>
