--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							Home</a>
 					</li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="about-you.html">
 							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="services.html">
-							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
+							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="fiorente-insights.html">Fiorente Insights</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="how-we-work.html">
 							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
 							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
 							Contact</a></li></ul>
