--- a/how-we-work.html
+++ b/how-we-work.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   
-  <section class="menu2 cleanm4_menu2 menu cid-sw845iDnR3" once="menu" id="menu2-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-1n">
+  <section class="menu2 cleanm4_menu2 menu cid-sw845iDnR3" once="menu" id="menu2-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-2i">
 
 	
 
@@ -98,11 +98,11 @@
 							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="services.html">
 							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="fiorente-insights.html">Fiorente Insights</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="how-we-work.html">
 							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
-							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
+							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="contact-us.html">
 							Contact</a></li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#"><span class="mobi-mbri mobi-mbri-calendar mbr-iconfont mbr-iconfont-btn"></span>Book a Consultation</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-calendar mbr-iconfont mbr-iconfont-btn"></span>Book a Consultation</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -267,7 +267,7 @@
 
                     <h4 class="card-title align-center mbr-fonts-style display-2">Book Your <span>FREE</span> Superannuation Review</h4>
 
-                    <div class="mbr-section-btn align-center"><a href="#" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>
+                    <div class="mbr-section-btn align-center"><a href="book-a-consultation.html" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>
                             BOOK ONLINE NOW</a></div>
 
 
