--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   
-  <section class="menu2 cleanm4_menu2 menu cid-sw845iDnR3" once="menu" id="menu2-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-17">
+  <section class="menu2 cleanm4_menu2 menu cid-sw845iDnR3" once="menu" id="menu2-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-2i">
 
 	
 
@@ -99,11 +99,11 @@
 							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="services.html">
 							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="fiorente-insights.html">Fiorente Insights</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="how-we-work.html">
 							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
-							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
+							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="contact-us.html">
 							Contact</a></li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#"><span class="mobi-mbri mobi-mbri-calendar mbr-iconfont mbr-iconfont-btn"></span>Book a Consultation</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-calendar mbr-iconfont mbr-iconfont-btn"></span>Book a Consultation</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -234,7 +234,7 @@
                             <ul>
                                 <li><strong>The first step of that process is asking the right questions to get a picture of your financial situation and where you are today.</strong></li><li><strong>The second is understanding what your goals are for the future.</strong></li><li><strong>The third step provides an honest assessment of how attainable those goals are. Which goals are most realistic? Which are your priorities?</strong></li><li><strong>The fourth step is to explore the actions we need to take to get there.</strong></li><li><strong>Then finally, we have a conversation about how comfortable you are with those actions. Are there things you can do? How can we help you stay on track?</strong></li></ul>
                         </div>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Super Review</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Super Review</a></div>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                             <ul>
                                 <li><strong>Firstly, we want to know where you’re going so we can improve your chances of success.</strong></li><li><strong>Secondly, we help you to imagine the future, accurately defining your objectives and develop the vital blueprint to propel you to success.</strong></li><li><strong>Thirdly, your business financial plan is prepared drawing upon our expertise in the intricacies of business management, tax law, and succession planning, implemented in conjunction with your legal and accounting advisors; working together to accomplish the journey.</strong></li></ul>
                         </div>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Succession Plan Review</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Succession Plan Review</a></div>
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                             <ul>
                                 <li><strong>For individuals and families: we help you establish suitable structures to enable effective philanthropy including advice in relation to Private Ancillary Funds.</strong></li><li><strong>&nbsp;</strong><strong>For NFP organisations: the management of the finances and investments of NFPs are complex – no two NFPs are the same. Our specialist NFP adviser takes the time to understand the needs of your organisation and tailors an investment strategy that meets your desired outcomes.</strong></li></ul>
                         </div>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free NFP Review</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free NFP Review</a></div>
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                             <strong>Independent Advice for Medical Professionals</strong></h3>
                         <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-5"><strong>How we help your Medical Practice.</strong></h2>
                         <p class="mbr-text align-left mbr-fonts-style mb-4 display-4">As a medical professional you will likely be earning more than the average Australian and feel financially secure. But in the 25,000 odd hours of training you undertook, did you cover the management of your personal finances?<br><br>You may require financial planning advice to help navigate the tricky waters of an accelerating career and earning capacity or you may be looking to structure and support a growing practice. We provide you with a tailored investment strategy as well as advice on managing your personal wealth, increasing earning capacity and future-proofing your legacy for generations to come.<br><br>All of our Private Client Advisers have the expertise to formulate a financial strategy that offers unrestrained access to investments.  This allows us to work with you and curate bespoke advice and portfolios that include tax minimisation, superannuation/SMSF structure and risk assessment, particular to your individual needs and future goals. Your dedicated advice team do the future thinking for you.<br><br>Fiorente's independent financial advisers specialise in working with medical professionals. We know your needs can be complex and require careful consideration.</p>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Super Review</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free Super Review</a></div>
                     </div>
                 </div>
             </div>
@@ -336,7 +336,7 @@
 
                     <h4 class="card-title align-center mbr-fonts-style display-2">Book Your <span>FREE</span> Superannuation Review</h4>
 
-                    <div class="mbr-section-btn align-center"><a href="#" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>
+                    <div class="mbr-section-btn align-center"><a href="book-a-consultation.html" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>
                             BOOK ONLINE NOW</a></div>
 
 
