--- a/contact-us.html
+++ b/contact-us.html
@@ -98,7 +98,7 @@
 					</li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="about-you.html">
 							About You</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="services.html">
 							Services</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="fiorente-insights.html">Fiorente Insights</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="how-we-work.html">
-							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="index.html">
+							How We Work</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="about-us.html">
 							About Us</a></li><li class="nav-item"><a class="nav-link link text-danger text-primary display-4" href="contact-us.html">
 							Contact</a></li></ul>
 			</div>
@@ -232,7 +232,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IzOO6XaAYas1kTFO734PHMDzk3w0Jczc2DicCPe3O4H1SrFdHBAZ04D4lWqOsoMYDeNWgx4gyrimR/x36CG0DLDo8A/cATzzc4d8IHFK/P5q+6JzYlMSZ0LVxKegzJTk.3bMyAHvGJsB1FzJ0oq13F5W7ed5aWwA71qq/JhyoEFyODgaA12aC9yY2eOzHvnOo2m1iWiVQUIMAHJLxi8uLqyz7Hosx4IEtV/vxr+YTYXzT9W+De2/nLk46SxymEdnD">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7BIcudJRDUtXJr1E4RQcE04nV8ll90RaNp7TfI/u9+dlo1FLOeSYBfsMBIpixq9U+rRwpLcNlIyEpmT9jAJqoXUFRb8qjT4D55Ld7vAAcz5L8nbrpo9eTwTg8CQFSE9p.Higg7xGqP1JPXZoh8cqjvAvmaWw+xZJxxiRH6KwwKwP8oqhyk56UF63KqdN3wN1NR1pqryOgC7z5+kzmesAcjAI/xwaRR0LkJ6rX9/w170jwsmiHf+fY4GLm0YOk87Kf">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling signing up!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
