--- a/contact-us.html
+++ b/contact-us.html
@@ -232,7 +232,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tO6E5qVCW3K7S39MuLFlGJesc4sYpQ6YMXSYB8gZDihxD+cQnwQfjgMtUdUvI2+9v5jRoJq29OsK3rzP0m/MzFskBShEYhlEPgXUhAWwuC0FLcRM9oWrABEKvPYVIS+B.acRQOt6j93mHjVswbtU02ab1Jyi09fyuCkY0VQtK6/9nRoM/HIgK+OMEOpKIzLvZjeUygzZi37C0VXHLgOtyOrH3KdL3iXudXw+UGfeVUSLEz0x0GWTT7Gv+Y0Ckk0ta">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bX6JY1DQ7RAgdKsI5Oe8223YV/A2G1q2AcTPTyHTarogPIAV7SZkiYQSFfVvh3/bcMClNX5rJMm8k7BEOfoJ1bzhAFcN7UQ96hyS1cDPVzBfxCAsZq8RYExM+gPwrelb.zOwfKr9Up4YPuktz8gm0L3exFKuSe6KSAjhnMfTI/CT6JucM4nnc5Qps108ekS7bWKL9JZ6lnLGKHj4V0G6nhqFPknD4YnGXtbkC+++CWQEGo/1ttX6N+TYOzlupIj9t">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling signing up!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -293,7 +293,7 @@
     </div>
 </section>
 
-<section class="extFooter cid-sx42Rynfbe" id="extFooter18-2g">
+<section class="extFooter cid-sx9IRIoGMX" id="extFooter18-3a">
 
     
 
@@ -391,9 +391,9 @@
             <div class="col-12 col-md-6 col-lg-3 mbr-fonts-style display-7">
                 <h5 class="pb-3 align-left"><strong>Millennium3 Privacy Policy</strong></h5>
                 <p class="mbr-text align-left text2 mbr-fonts-style display-4">
-                    The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="http://privacy.html" class="text-white" target="_blank"><strong>READ MORE →</strong></a></p>
+                    The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="privacy.html" class="text-white text-primary" target="_blank"><strong>READ MORE →</strong></a></p>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-AshleyDowiePartA3Aug2020PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-ScottLongPartA3Aug2020PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
 
             </div>
             
