--- a/about-us.html
+++ b/about-us.html
@@ -386,7 +386,7 @@
     </div>
 </section>
 
-<section class="extFooter cid-sx3VyNMzrt" id="extFooter18-2c">
+<section class="extFooter cid-sx9IYL2BFl" id="extFooter18-3b">
 
     
 
@@ -484,16 +484,16 @@
             <div class="col-12 col-md-6 col-lg-3 mbr-fonts-style display-7">
                 <h5 class="pb-3 align-left"><strong>Millennium3 Privacy Policy</strong></h5>
                 <p class="mbr-text align-left text2 mbr-fonts-style display-4">
-                    The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="http://privacy.html" class="text-white" target="_blank"><strong>READ MORE →</strong></a></p>
+                    The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="privacy.html" class="text-white text-primary" target="_blank"><strong>READ MORE →</strong></a></p>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-AshleyDowiePartA3Aug2020PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-ScottLongPartA3Aug2020PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
 
             </div>
             
         </div>
         <div class="item">
                     <div class="card-box">
-                        <h4 class="theme align-left mbr-fonts-style display-4"><a href="https://www.kineticsolutions.com.au" class="text-white" target="_blank"><br></a><a href="https://www.kineticsolutions.com.au" class="text-white" target="_blank">Website made with&nbsp;❤️&nbsp;&nbsp;by Kinetic Solutions</a></h4>
+                        <h4 class="theme align-left mbr-fonts-style display-4"><a href="https://www.kineticsolutions.com.au" class="text-white" target="_blank">Website made with&nbsp;❤️&nbsp;&nbsp;by Kinetic Solutions</a></h4>
                     </div>
                 </div>
 
