--- a/book-a-consultation.html
+++ b/book-a-consultation.html
@@ -149,12 +149,12 @@
 
 </section>
 
-<section class="mbr-section article content1 cid-sx47TIuxh1" id="custom-html-2m">
+<section class="mbr-section article content1 cid-sxahBsblIM" id="custom-html-3k">
 
      
 
-    <div class="container">
-        <script src="https://square.site/appointments/buyer/widget/1jrd8oyt58qi05/L447NEAFMYHD3.js"></script>
+    <div class="embed-responsive embed-responsive-1by1">
+    <iframe class="embed-responsive-item lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" scrolling="no" allowfullscreen="" loading="lazy" data-src="https://fiorenteadvisory.square.site"></iframe>
     </div>
 </section>
 
