--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 
                 <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-1"><strong>Growing your</strong><div><strong>financial future!</strong></div></h1>
                 <p class="mbr-text mbr-semibold mbr-fonts-style mb-4 display-2">Personal service for<br>financial peace of mind.</p>
-                <div class="mbr-section-btn"><a class="btn btn-lg btn-white display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Book your superannuation review</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-lg btn-white display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Book Your Superannuation Review</a></div>
             </div>
         </div>
     </div>
