--- a/superannuation.html
+++ b/superannuation.html
@@ -131,8 +131,8 @@
                         <div class="img-content"></div>
                         <div class="box-content">
                             <div class="content-box">
-                                <h4 class="box-title2 mbr-medium mbr-white pb-2 mbr-fonts-style display-5">Superannuation is not just an investment. It's a tax-effective strategy.</h4>
-                                <h3 class="box-text2 mbr-regular mbr-white pb-2 mbr-fonts-style display-2">A powerful tool to accumulate wealth.</h3>
+                                <h4 class="box-title2 mbr-medium pb-2 mbr-fonts-style display-5">Superannuation is not just an investment. It's a tax-effective strategy.</h4>
+                                <h3 class="box-text2 mbr-regular pb-2 mbr-fonts-style display-2">A powerful tool to accumulate wealth.</h3>
                             </div>
                         </div>
                     </div>
