--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="Estate Planning Advice" loading="lazy" class="lazyload" data-src="assets/images/3.svg">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-5">Estate planning<div>Advice</div></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-5">Estate Planning<div>Advice</div></h4>
                         
                         <div class="link-wrap">
                             <div class="line"></div>
-                            <div class="mbr-link-btn"><a class="btn btn-md btn-info-outline display-4" href="services.html#individuals-families"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a></div>
+                            <div class="mbr-link-btn"><a class="btn btn-md btn-info-outline display-4" href="succession-estate-planning.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a></div>
                             <div></div>
                         </div>
                     </div>
