--- a/services.html
+++ b/services.html
@@ -258,7 +258,7 @@
                             <ul>
                                 <li><strong>Firstly, we want to know where you’re going so we can improve your chances of success;</strong></li><li><strong>Secondly, we help you imagine the future, accurately defining your objectives, and developing the vital blueprint to propel you to success; and</strong></li><li><strong>Thirdly, we prepare your business financial plan drawing upon our expertise in the intricacies of business management, tax law, and succession planning, implemented in conjunction with your legal and accounting advisors, working together to accomplish the journey.</strong></li></ul><strong>
                         </strong></div><strong>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your FREE Succession Planning Consultation</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your FREE Consultation</a></div>
                     </strong></div><strong>
                 </strong></div><strong>
             </strong></div><strong>
@@ -283,7 +283,7 @@
                             <ul>
                                 <li><strong>For individuals and families: we help you establish suitable structures to enable effective philanthropy including advice in relation to Private Ancillary Funds.</strong></li><li><strong>&nbsp;</strong><strong>For NFP organisations: the management of the finances and investments of NFPs are complex – no two NFPs are the same. Our specialist NFP adviser takes the time to understand the needs of your organisation and tailors an investment strategy that meets your desired outcomes.</strong></li></ul>
                         </div>
-                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your Free NFP Review</a></div>
+                        <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-primary display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Book Your FREE Consultation</a></div>
                     </div>
                 </div>
             </div>
