--- a/contact-us.html
+++ b/contact-us.html
@@ -232,9 +232,9 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n5W06c5ma9+8W/zV5fnK7OMAe+fbJfZ8PjvIRXuvO1MxknBxYgydwKTZQ80yv/30rz8GQpVnnuHoGGEM19GAfV4HClqL4MJyvJlnKDHI0KTXnNFR9drqC4Ga9N51cSLS.v16RTznHshRKVJwEy3fYP3kbJ/sPJf89n5e9mCCgQVdvNMTrLD1sfsmhyztgsd4AQ1AK4wwJE5tLLVnAU1rbD2b7PQLybzptI20cAJ2whvM2sv7pat9gbTWinDi1MAO2">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LR9BVTt8Rk41WuqwwAq0CJ1fgxfR7JTZVu0q23BqnGamsx3x8bJYFDJHo4aGkZpZOiqxbIqDk2XioJb4AdmBLUCDCZ5vsYxOwBv3CQPA7irLQlvYtTn12L+v99qBErvl.Z2NZWAwI3Zm+vdnh6s7cJnJLu/Nbt+VGLxSwS5x8GUZa/zNjnQDUn6e8O1aM36vj84GKiayOJP+d+Pg268SFnlCLSqCmI838o9NJ8TpJzUaURtOh1RLj/4qX877rf0eo">
                         <div class="row">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling signing up!</div>
+                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for signing up!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
                         </div>
                         <div class="dragArea row">
