--- a/book-a-consultation.html
+++ b/book-a-consultation.html
@@ -192,7 +192,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.facebook.com/pages/FiorenteAdvisory/" target="_blank">
+                        <a href="https://www.facebook.com/fiorenteadvisory" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(48, 54, 68); fill: rgb(48, 54, 68);"></span>
                         </a>
                     </div>
