--- a/contact-us.html
+++ b/contact-us.html
@@ -232,7 +232,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LR9BVTt8Rk41WuqwwAq0CJ1fgxfR7JTZVu0q23BqnGamsx3x8bJYFDJHo4aGkZpZOiqxbIqDk2XioJb4AdmBLUCDCZ5vsYxOwBv3CQPA7irLQlvYtTn12L+v99qBErvl.Z2NZWAwI3Zm+vdnh6s7cJnJLu/Nbt+VGLxSwS5x8GUZa/zNjnQDUn6e8O1aM36vj84GKiayOJP+d+Pg268SFnlCLSqCmI838o9NJ8TpJzUaURtOh1RLj/4qX877rf0eo">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Spaj5cej67r4VcpL+V9nhhf++iXyZSl/VuRECw6yfZa/gUHy8+ab1dVt1A1E2C5H6viGKTlioI3A3QV6iqcD1Rl/QzrFW74ECHBrHJOaxRNFzgP5IMJ2NtDIq/YXJEHK.3HB5cyyfMRWlXssnZTyGBRfEOUbG+QM3SAquI5qpgVzu2eg9MPgh7QVlMd+IJzWGq6dQIsW8aH6JRXG/ERwVeqRiCAeqC6lvBQCEVDzISGv5NMtKRdxcLIg0IzUJmEzF">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for signing up!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -327,7 +327,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.facebook.com/pages/FiorenteAdvisory/" target="_blank">
+                        <a href="https://www.facebook.com/fiorenteadvisory" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(48, 54, 68); fill: rgb(48, 54, 68);"></span>
                         </a>
                     </div>
