--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -279,9 +279,9 @@
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
-                    <p class="mbr-text mbr-fonts-style mb-4 display-4">Ash prides himself in being recognised by his clients &amp; peers as an experienced financial advisor.<br><br>With a professional career spanning over 15 years, Ash has accumulated a broad range of experience that allows him to provide credible advice and market knowledge with the intent to achieve the highest value possible for his clients.<br><br>As a partner of a company with more than 150 employees, Ash became increasingly aware of losing connection with his clients. Taking pride in sharing his knowledge and commitment to providing exceptional experiences for clients, Ash chose to commit himself to serve with a more personalised approach which led to the start of Fiorente Advisory with office hubs in Melbourne, on the Sunshine Coast and in Townsville.<br><br>What is the significance of the word “Fiorente”? It is an Italian adjective for “flourishing and thriving”. This simple word describes my desire for my company as well as the financial position of my clients.<br><br>“My focus as a Financial Advisor is in educating and assisting clients to make the best decisions available in building and protecting their wealth to ensure they have the income they desire to live their best life.”<br><br>If you would like to understand the benefits of having an experienced Financial Advisor provide you with financial peace of mind, contact Ash today for a consultation</p>
-                    <p class="name mbr-fonts-style mb-1 display-4">
-                        <strong>Founder &amp; Director</strong></p>
+                    <p class="mbr-text mbr-fonts-style mb-4 display-4">Ash prides himself in being recognised by his clients &amp; peers as an experienced financial advisor.<br><br>With over 15 years as a financial adviser, Ash has been recognised as a leader in his profession having won multiple awards as a financial adviser. His high technical expertise coupled with his unique ability to communicate to clients (making the complex simple) is a reason he has attracted and retained loyal clients over his many years in the industry.<br><br>As a partner of a company with more than 150 employees, Ash became increasingly aware of losing connection with his clients. Taking pride in sharing his knowledge and commitment to providing exceptional experiences for clients, Ash chose to commit himself to serve with a more personalised approach which led to the start of Fiorente Advisory with office hubs in Melbourne, on the Sunshine Coast and in Townsville.<br><br>What is the significance of the word “Fiorente”? It is an Italian adjective for “flourishing and thriving”. This simple word describes my desire for my company as well as the financial position of my clients.<br><br>“My focus as a Financial Advisor is in educating and assisting clients to make the best decisions available in building and protecting their wealth to ensure they have the income they desire to live their best life.”<br><br>If you would like to understand the benefits of having an experienced Financial Advisor provide you with financial peace of mind, contact Ash today for a consultation</p>
+                    <p class="name mbr-fonts-style mb-1 display-7">
+                        <strong>Ash Dowie | Founder &amp; Director</strong></p>
                     
                 </div>
             </div>
