--- a/about-you.html
+++ b/about-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -160,7 +160,7 @@
 							<img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="" title="" loading="lazy" class="lazyload" data-src="assets/images/mbr-1532x1026.jpg">
 									
                             <div class="item-image-content">
-											<p class="mbr-title mbr-fonts-style display-5">Simple, Transparent and Effective Financial Advisory Service.</p>
+											<p class="mbr-title mbr-fonts-style display-5"><strong><u>Simple, Transparent and Effective </u></strong>Financial Advisory Service.</p>
 									<div class="mbr-section-btn2"><a href="how-we-work.html" class="btn item-btn btn-w display-7"> </a></div>
 									</div>
                    
