--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -232,7 +232,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Spaj5cej67r4VcpL+V9nhhf++iXyZSl/VuRECw6yfZa/gUHy8+ab1dVt1A1E2C5H6viGKTlioI3A3QV6iqcD1Rl/QzrFW74ECHBrHJOaxRNFzgP5IMJ2NtDIq/YXJEHK.3HB5cyyfMRWlXssnZTyGBRfEOUbG+QM3SAquI5qpgVzu2eg9MPgh7QVlMd+IJzWGq6dQIsW8aH6JRXG/ERwVeqRiCAeqC6lvBQCEVDzISGv5NMtKRdxcLIg0IzUJmEzF">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zKHmGviaBk8qBxePFTnKPO7FWLwNR2ax2ibrMfnRG6RRkFRAH56AReVt3/lckcB0UTn3qrnvtre+zzf7se+cDCIryyKWcJqSvgb7vpy9dEpQKIcQ54WgnfoENqpQsp/l.ThMjzKNHC2trjeRSU+UjQkcYVHhpEwY07g5+eLr1xYVY/szutqqBA3VMbpkLSArRkXfuRNc5Z7kWNcAs9tmDBzZxo3VeePaXyQiYFmjmefZ9v5cqldnac4tSmxBAuX3p">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for signing up!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
