--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/recaptcha.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -123,10 +122,10 @@
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-6 align-left">
+            <div class="col-12 col-lg-12 align-left">
                 
-                <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-1"><strong>Growing your</strong><div><strong>financial future!</strong></div></h1>
-                <p class="mbr-text mbr-semibold mbr-fonts-style mb-4 display-2">Personal service for<br>financial peace of mind.</p>
+                <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-1"><strong>Simple. Transparent.&nbsp;</strong><strong>Effective.</strong></h1>
+                <p class="mbr-text mbr-semibold mbr-fonts-style mb-4 display-2">Personal financial services for your peace of mind.</p>
                 <div class="mbr-section-btn"><a class="btn btn-lg btn-white display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Book Your Superannuation Review</a></div>
             </div>
         </div>
@@ -224,7 +223,7 @@
 						<div class="box-content">
 							<div class="content-box">
 								<h4 class="box-title2 mbr-medium mbr-white pb-2 mbr-fonts-style display-2"><strong>Our Mission</strong></h4>
-								<h3 class="box-text2 mbr-regular mbr-white pb-2 mbr-fonts-style display-5">To help you feel secure knowing that your money is always growing and your advisor is ready to adapt to whatever the future brings.</h3>
+								<h3 class="box-text2 mbr-regular mbr-white pb-2 mbr-fonts-style display-5">To help you feel secure knowing that your wealth is always growing and your advisor is ready to adapt to whatever the future brings.</h3>
 							</div>
 						</div>
 					</div>
@@ -261,7 +260,7 @@
                 
                 <h1 class="mbr-section-title mbr-bold pb-2 mbr-fonts-style display-1">How we work for your financial peace of mind:</h1>
                 <p class="mbr-text pb-2 mbr-white mbr-semibold mbr-fonts-style display-5"><strong><u>
-                    We take financial planning seriously!</u></strong><br>Through the use of smart technology and progressive strategies, your Advisor-managed account is built towards financial security.
+                    We take financial planning seriously!</u></strong><br>Through the use of smart technology and progressive strategies, our advice and direction provides financial security and comfort.
                 </p>
                 <div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
                     <div class="icon-wrap">
@@ -634,7 +633,6 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid.min.js"></script>
   
   
   
