--- a/life-insurance.html
+++ b/life-insurance.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -143,7 +143,7 @@
                 <div class="content-block">
                     <h3 class="mbr-section-subtitle mbr-regular mbr-black pb-2 mbr-fonts-style display-5"><strong>Are you adequately insured?</strong></h3>
                     
-                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">We are specialist insurance and risk advisers who work with you to ascertain the right level of cover for you, whatever your circumstance.<br><br>There are many different types of personal and life insurance:</p><p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">&nbsp;✓ Income protection<br>&nbsp;✓ Total &amp; permanent disability insurance<br>&nbsp;✓ Trauma insurance<br>&nbsp;✓ Term life insurance<br><br>We are quite confident that you will end up not only better covered but financially better off, given our fee-for-service insurance advice.<br><br>Contact us today to discuss your particular needs with our specialist insurance and risk adviser.</p>
+                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">We are specialist insurance and risk advisers who work with you to ascertain the right level of cover for you, whatever your circumstance.<br><br>There are many different types of personal and life insurance:</p><p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">&nbsp;✓ Income protection<br>&nbsp;✓ Total &amp; permanent disability insurance<br>&nbsp;✓ Trauma insurance<br>&nbsp;✓ Term life insurance<br> ✓ Buy/Sell Insurances for businesses<br> ✓ Key Person Insurance<br><br>We are quite confident that you will end up not only better covered but financially better off.<br><br>Contact us today to discuss your particular needs with our specialist insurance and risk adviser.</p>
                     
                 </div>
             </div>
