--- a/succession-estate-planning.html
+++ b/succession-estate-planning.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -143,7 +143,7 @@
                 <div class="content-block">
                     <h3 class="mbr-section-subtitle mbr-regular mbr-black pb-2 mbr-fonts-style display-5"><strong>You spend a lifetime building your wealth. Make sure it's in the right hands!</strong></h3>
                     
-                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Today's assets become the foundation of your family's future. It's your legacy. And you want it done right.<br>The financial plans you make today significantly impact how much of your wealth and assets protect your future.<br><br>Our investment and financial advisers help ensure a smooth transition and tax-effective transfer of assets guaranteeing you and your family peace of mind.</p>
+                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Today's assets become the foundation of your family's future. It's your legacy. And you want it done right.<br>The financial plans you make today significantly impact how much of your wealth and assets protect your future.<br><br>Our financial advisers work with your estate planning professionals to provide strategies to help ensure a smooth transition and tax effective transfer of assets.<br></p>
                     
                 </div>
             </div>
