--- a/superannuation.html
+++ b/superannuation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"   >
+<html lang="en"   lang="en">
 <head>
   
   <meta charset="UTF-8">
@@ -143,7 +143,7 @@
                 <div class="content-block">
                     <h3 class="mbr-section-subtitle mbr-regular mbr-black pb-2 mbr-fonts-style display-5"><strong>Superannuation</strong>&nbsp;&amp; SMSF</h3>
                     
-                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">It would be best to maximise your superannuation contributions to ensure a healthy stream of income in retirement. But there are many things to consider - your need to access capital, your ability to contribute, your investment horizon for long term financial growth and your retirement income needs.<br>We are specialists in the design and management of Self Managed Super Fund (SMSF) strategies. Starting with the careful design of your investment portfolio, we provide ongoing management and technical advice on superannuation legislation and investment strategy.<br>We utilise sophisticated portfolio administration technology to manage personal portfolios and administer all aspects of your SMSF. We also maintain member balances, pension payments and associated reporting requirements for you.<br>
+                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">It would be best to maximise your superannuation contributions to ensure a healthy stream of income in retirement. But there are many things to consider - your need to access capital, your ability to contribute, your investment horizon for long term financial growth and your retirement income needs.<br>We spend time understanding your risk appetite and provide portfolio solutions depending on your investment time horizon and expectations of returns. We believe (generally) that complex investment strategies are no more effective than simplistic ones. Our clients appreciate the simplicity and effectiveness of our investment advice and the focus on providing ongoing management, maintaining member cash balances, pension payments and associated reporting.<br>
                     </p>
                     
                 </div>
