--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-12 col-lg-12 align-left">
                 
-                <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-1"><strong>Simple. Transparent.&nbsp;</strong><strong>Effective.</strong></h1>
+                <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-1"><strong>Simple.</strong><br><strong>Transparent.</strong><strong><br></strong><strong>Effective.</strong></h1>
                 <p class="mbr-text mbr-semibold mbr-fonts-style mb-4 display-2">Personal financial services for your peace of mind.</p>
                 <div class="mbr-section-btn"><a class="btn btn-lg btn-white display-4" href="book-a-consultation.html"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Book Your Superannuation Review</a></div>
             </div>
