--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="info-widget">
 					<a href="https://goo.gl/maps/dRvKhv9WARgK7eqF9" target="_blank"><span class="widget-icon mbr-iconfont mbri-pin" style="color: rgb(48, 54, 68); fill: rgb(48, 54, 68);"></span></a>
 					<div class="widget-content display-4">
-						<p class="mbr-fonts-style mbr-regular widget-title display-4">Location:</p>
+						<p class="mbr-fonts-style mbr-regular widget-title display-4">Head Office:</p>
 						<p class="mbr-fonts-style mbr-regular widget-title display-4"><a href="https://goo.gl/maps/TFqh1kYhnebd8MnS6" class="text-primary" target="_blank">14/9 Capital Pl, Birtinya QLD 4575</a></p>
 					</div>
 				</div>
@@ -605,7 +605,7 @@
                 <p class="mbr-text align-left text2 mbr-fonts-style display-4">
                     The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="privacy.html" class="text-white text-primary" target="_blank"><strong>READ MORE →</strong></a></p>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-AshleyDowiePartA3Aug2020PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-ScottLongPartA3Aug2020PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--AshleyDowiePartA1Jun2021PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--ScottLongPartA1Jun2021PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
 
             </div>
             
