--- a/about-us.html
+++ b/about-us.html
@@ -73,7 +73,7 @@
 				<div class="info-widget">
 					<a href="https://goo.gl/maps/dRvKhv9WARgK7eqF9" target="_blank"><span class="widget-icon mbr-iconfont mbri-pin" style="color: rgb(48, 54, 68); fill: rgb(48, 54, 68);"></span></a>
 					<div class="widget-content display-4">
-						<p class="mbr-fonts-style mbr-regular widget-title display-4">Location:</p>
+						<p class="mbr-fonts-style mbr-regular widget-title display-4">Head Office:</p>
 						<p class="mbr-fonts-style mbr-regular widget-title display-4"><a href="https://goo.gl/maps/TFqh1kYhnebd8MnS6" class="text-primary" target="_blank">14/9 Capital Pl, Birtinya QLD 4575</a></p>
 					</div>
 				</div>
@@ -336,7 +336,7 @@
                 <div class="card">
                     <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-5"><strong>Jarrod Hautaniemi</strong></h2>
                     <p class="mbr-text align-left mbr-fonts-style mb-3 display-7">Jarrod’s industry experience commenced after graduating high school where he worked as an assistant broker at his family’s long-standing insurance brokerage firm in Townsville. In 2020, he joined the Fiorente Advisory team whilst completing his double degree in Financial Planning and Accounting. He has adopted an intelligible approach to communicating with people and understands the great responsibilities associated with the work that he undertakes as a financial planner (in training) at Fiorente Advisory.<br><br>With over 300 days of sunshine in North Queensland, Jarrod loves the outdoors and enthusiastically pursues sports and adventure. In his downtime, he enjoys surrounding himself with family, friends and food.</p>
-                    <h3 class="mbr-section-subtitle align-left mbr-fonts-style mb-3 display-7"><strong>Office Manager</strong></h3>
+                    <h3 class="mbr-section-subtitle align-left mbr-fonts-style mb-3 display-7"><strong>Associate Financial Advisor</strong></h3>
                 </div>
             </div>
         </div>
@@ -486,7 +486,7 @@
                 <p class="mbr-text align-left text2 mbr-fonts-style display-4">
                     The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="privacy.html" class="text-white text-primary" target="_blank"><strong>READ MORE →</strong></a></p>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-AshleyDowiePartA3Aug2020PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG-ScottLongPartA3Aug2020PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--AshleyDowiePartA1Jun2021PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--ScottLongPartA1Jun2021PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
 
             </div>
             
