update insights page

--- a/fiorente-insights.html
+++ b/fiorente-insights.html
@@ -120,9 +120,8 @@
 
      
 
-    <div class="embed-responsive embed-responsive-1by1">
-    <iframe class="embed-responsive-item lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" allowfullscreen="" loading="lazy" data-src="https://fiorenteadvisory.blogspot.com/"></iframe>
-    </div>
+    <script src="https://apps.elfsight.com/p/platform.js" defer=""></script>
+<div class="elfsight-app-d69b8736-635b-4799-aacf-3271d246f24e"></div>
 </section>
 
 <section class="features7 cid-swZRSgRbUo" id="extFeatures49-1x">
