--- a/fiorente-insights.html
+++ b/fiorente-insights.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/fiorente-insights-meta.png">
+  <meta property="og:image" content="assets/images/fiorente-insights-meta.png">
+  <meta name="twitter:title" content="Fiorente Insights">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/fiorenteleaf.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Fiorente Advisory specialises in growing your financial future! We provide personal service for financial peace of mind. We will help you find your share of $17.5 billion in lost superannuation.">
   
   
   <title>Fiorente Insights</title>
@@ -31,6 +35,20 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-E4HRB6MT4K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E4HRB6MT4K');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu2 cleanm4_menu2 menu cid-sw845iDnR3" once="menu" id="menu2-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-sw845iDnR3-2i">
 
@@ -121,7 +139,7 @@
      
 
     <script src="https://apps.elfsight.com/p/platform.js" defer=""></script>
-<div class="elfsight-app-d69b8736-635b-4799-aacf-3271d246f24e"></div>
+    <div class="elfsight-app-7988caad-39b9-4e72-b310-46002bd47923"></div>
 </section>
 
 <section class="features7 cid-swZRSgRbUo" id="extFeatures49-1x">
@@ -287,6 +305,8 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
@@ -296,7 +316,8 @@
   
   
   
-  <input name="animation" type="hidden">
+<input name="cookieData" type="hidden" data-cookie-customdialogselector="null" data-cookie-colortext="#ffffff" data-cookie-colorbg="rgba(124, 134, 164, 0.99)" data-cookie-textbutton="Agree" data-cookie-colorbutton="#303644" data-cookie-colorlink="#303644" data-cookie-underlinelink="true" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>privacy policy</a>.">
+    <input name="animation" type="hidden">
   <script>"use strict";if("loading"in HTMLImageElement.prototype){document.querySelectorAll('img[loading="lazy"],iframe[loading="lazy"]').forEach(e=>{e.src=e.dataset.src,e.style.paddingTop=100*e.getAttribute("data-aspectratio")+"%",e.style.height=0,e.onload=function(){e.removeAttribute("style")}})}else{const e=document.createElement("script");e.src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.2/lazysizes.min.js",document.body.appendChild(e)}</script>
 
 </body>
